deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toolbox
  namespace: toolbox
  labels:
    app: toolbox
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
  selector:
    matchLabels:
      app: toolbox
  template:
    metadata:
      labels:
        app: toolbox
    spec:
      containers:
      - name: toolbox
        image: us-central1-docker.pkg.dev/hargow/toolbox/toolbox:%tag%
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
        resources:
          requests:
            cpu: 250m
            ephemeral-storage: 100Mi
            memory: 512Mi
          limits:
            cpu: 250m
            ephemeral-storage: 100Mi
            memory: 512Mi
        livenessProbe:
          httpGet:
            path: /live
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 15
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 15
          successThreshold: 1
          failureThreshold: 3
