service.yaml
apiVersion: v1
kind: Service
metadata:
  name: toolbox
  namespace: toolbox
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: toolbox
